[tool.poetry]
name = "healthzed"
version = "0.1.0"
description = ""
authors = ["chrisezhu <thereisnoaddress@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.3.0"
fastapi = "^0.106.0"
uvicorn = "^0.24.0.post1"
pre-commit = "^3.6.0"
boto3 = "^1.33.12"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
pytest = "^7.4.3"
httpx = "^0.25.2"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
